fix image align

--- a/docs/style.css
+++ b/docs/style.css
@@ -102,6 +102,7 @@ figure.fig {
 figure img {
   display: block;
   max-width: 100%;
+  margin: auto;
 }
 
 figure.fig>div {
